# gl-adguard-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/gl_adguard_bridge/: __init__.py  __main__.py  auth.py  config.py  proxy.py  server.py
