[project]
name = "gl-adguard-bridge"
version = "0.0.0"
description = "HTTP proxy server to support Home Assistant integration with AdGuard Home behind GL.iNet routers requiring authentication"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "starlette>=0.30.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["gl_adguard_bridge"]
[tool.hatch.build.targets.wheel]
packages = ["src/gl_adguard_bridge"]
